Bug 215954 - generic_handle_domain_irq+0x59/0x70
Summary: generic_handle_domain_irq+0x59/0x70
Status: RESOLVED CODE_FIX
Alias: None
Product: Alternate Trees
Classification: Unclassified
Component: rt (show other bugs)
Hardware: AMD Linux
: P1 high
Assignee: alt-trees_rt
URL:
Keywords:
: 215955 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-08 13:15 UTC by sander44
Modified: 2022-05-12 08:00 UTC (History)
1 user (show)

See Also:
Kernel Version: 5.18.0-rc5-rt5
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg file (94.31 KB, text/plain)
2022-05-08 13:15 UTC, sander44
Details
patch (5.60 KB, patch)
2022-05-09 13:35 UTC, Sebastian A. Siewior
Details | Diff

Description sander44 2022-05-08 13:15:09 UTC
Hi Kernel Team,

I try today to check Realtime Kernel on my system.
But i notice one issue with kernel/irq/irqdesc.c.

OS: Debian11+/MXLinux
Kernel: 5.18.0-rc5-rt5/5.18.0-viva5-rt5-realtime

[    1.051055] ------------[ cut here ]------------
[    1.051056] WARNING: CPU: 4 PID: 200 at kernel/irq/irqdesc.c:700 generic_handle_domain_irq+0x59/0x70
[    1.051062] Modules linked in: crct10dif_pclmul crc32_pclmul ghash_clmulni_intel fb_sys_fops aesni_intel crypto_simd drm cryptd nvme_core i2c_hid_acpi xhci_pci i2c_piix4 xhci_pci_renesas i2c_hid wmi hid video
[    1.051069] CPU: 4 PID: 200 Comm: irq/7-pinctrl_a Not tainted 5.18.0-viva5-rt5-realtime #1
[    1.051071] Hardware name: ASUSTeK COMPUTER INC. ROG Zephyrus G14 GA401QM_GA401QM/GA401QM, BIOS GA401QM.410 12/13/2021
[    1.051072] RIP: 0010:generic_handle_domain_irq+0x59/0x70
[    1.051075] Code: a9 00 00 0f 00 75 16 48 8b 47 38 8b 00 a9 00 00 00 10 74 09 0f 0b b8 ff ff ff ff 5d c3 48 8b 47 68 e8 db 8c 09 01 31 c0 5d c3 <0f> 0b eb ba b8 ea ff ff ff 5d c3 66 66 2e 0f 1f 84 00 00 00 00 00
[    1.051076] RSP: 0018:ffffae0440843e28 EFLAGS: 00010246
[    1.051077] RAX: 0000000080000000 RBX: ffffae044001e520 RCX: 0000000000000009
[    1.051078] RDX: 0000000000000000 RSI: 0000000000000009 RDI: ffff977fc0ad0000
[    1.051079] RBP: ffffae0440843e28 R08: 0000000010141b00 R09: 0000000000000000
[    1.051080] R10: ffffae044001e524 R11: 0000000000000000 R12: 0000000000000004
[    1.051080] R13: ffff977fc0adc828 R14: 0000000000000008 R15: 0000000000000007
[    1.051081] FS:  0000000000000000(0000) GS:ffff97868e700000(0000) knlGS:0000000000000000
[    1.051082] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[    1.051083] CR2: 00007f5d58d4ebcb CR3: 00000001c001a000 CR4: 0000000000750ee0
[    1.051084] PKRU: 55555554
[    1.051085] Call Trace:
[    1.051086]  <TASK>
[    1.051087]  amd_gpio_irq_handler+0x133/0x420
[    1.051090]  ? rt_spin_unlock+0x18/0x40
[    1.051094]  ? irq_finalize_oneshot.part.0+0xe0/0xe0
[    1.051095]  irq_forced_thread_fn+0x3a/0x90
[    1.051097]  irq_thread+0xcf/0x170
[    1.051098]  ? irq_thread_fn+0x60/0x60
[    1.051100]  ? irq_thread_check_affinity+0xe0/0xe0
[    1.051101]  kthread+0x116/0x130
[    1.051103]  ? kthread_complete_and_exit+0x20/0x20
[    1.051105]  ret_from_fork+0x22/0x30
[    1.051108]  </TASK>
[    1.051109] ---[ end trace 0000000000000000 ]---

utnechita@ionutnechita-arz2022:~
$ lscpu
Architecture:            x86_64
  CPU op-mode(s):        32-bit, 64-bit
  Address sizes:         48 bits physical, 48 bits virtual
  Byte Order:            Little Endian
CPU(s):                  16
  On-line CPU(s) list:   0-15
Vendor ID:               AuthenticAMD
  Model name:            AMD Ryzen 9 5900HS with Radeon Graphics
    CPU family:          25
    Model:               80
    Thread(s) per core:  2
    Core(s) per socket:  8
    Socket(s):           1
    Stepping:            0
    Frequency boost:     enabled
    CPU(s) scaling MHz:  64%
    CPU max MHz:         4680.0000
    CPU min MHz:         400.0000
    BogoMIPS:            6596.55
    Flags:               fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt pdpe1gb rdtscp
                          lm constant_tsc rep_good nopl nonstop_tsc cpuid extd_apicid aperfmperf rapl pni pclmulqdq monitor ssse3 fma cx16 sse4_1 sse4_2 movbe popcnt a
                         es xsave avx f16c rdrand lahf_lm cmp_legacy svm extapic cr8_legacy abm sse4a misalignsse 3dnowprefetch osvw ibs skinit wdt tce topoext perfctr
                         _core perfctr_nb bpext perfctr_llc mwaitx cpb cat_l3 cdp_l3 hw_pstate ssbd mba ibrs ibpb stibp vmmcall fsgsbase bmi1 avx2 smep bmi2 erms invpc
                         id cqm rdt_a rdseed adx smap clflushopt clwb sha_ni xsaveopt xsavec xgetbv1 xsaves cqm_llc cqm_occup_llc cqm_mbm_total cqm_mbm_local clzero ir
                         perf xsaveerptr rdpru wbnoinvd cppc arat npt lbrv svm_lock nrip_save tsc_scale vmcb_clean flushbyasid decodeassists pausefilter pfthreshold av
                         ic v_vmsave_vmload vgif v_spec_ctrl umip pku ospke vaes vpclmulqdq rdpid overflow_recov succor smca fsrm
Virtualization features: 
  Virtualization:        AMD-V
Caches (sum of all):     
  L1d:                   256 KiB (8 instances)
  L1i:                   256 KiB (8 instances)
  L2:                    4 MiB (8 instances)
  L3:                    16 MiB (1 instance)
NUMA:                    
  NUMA node(s):          1
  NUMA node0 CPU(s):     0-15
Vulnerabilities:         
  Itlb multihit:         Not affected
  L1tf:                  Not affected
  Mds:                   Not affected
  Meltdown:              Not affected
  Spec store bypass:     Mitigation; Speculative Store Bypass disabled via prctl
  Spectre v1:            Mitigation; usercopy/swapgs barriers and __user pointer sanitization
  Spectre v2:            Mitigation; Retpolines, IBPB conditional, IBRS_FW, STIBP always-on, RSB filling
  Srbds:                 Not affected
  Tsx async abort:       Not affected

lspci
00:00.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne Root Complex
00:00.2 IOMMU: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne IOMMU
00:01.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
00:01.1 PCI bridge: Advanced Micro Devices, Inc. [AMD] Renoir PCIe GPP Bridge
00:02.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
00:02.2 PCI bridge: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne PCIe GPP Bridge
00:02.4 PCI bridge: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne PCIe GPP Bridge
00:08.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Renoir PCIe Dummy Host Bridge
00:08.1 PCI bridge: Advanced Micro Devices, Inc. [AMD] Renoir Internal PCIe GPP Bridge to Bus
00:14.0 SMBus: Advanced Micro Devices, Inc. [AMD] FCH SMBus Controller (rev 51)
00:14.3 ISA bridge: Advanced Micro Devices, Inc. [AMD] FCH LPC Bridge (rev 51)
00:18.0 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 0
00:18.1 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 1
00:18.2 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 2
00:18.3 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 3
00:18.4 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 4
00:18.5 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 5
00:18.6 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 6
00:18.7 Host bridge: Advanced Micro Devices, Inc. [AMD] Cezanne Data Fabric; Function 7
01:00.0 VGA compatible controller: NVIDIA Corporation GA106M [GeForce RTX 3060 Mobile / Max-Q] (rev a1)
01:00.1 Audio device: NVIDIA Corporation Device 228e (rev a1)
02:00.0 Network controller: MEDIATEK Corp. MT7921 802.11ax PCI Express Wireless Network Adapter
03:00.0 Non-Volatile memory controller: Intel Corporation Device f1aa (rev 03)
04:00.0 VGA compatible controller: Advanced Micro Devices, Inc. [AMD/ATI] Cezanne (rev c4)
04:00.1 Audio device: Advanced Micro Devices, Inc. [AMD/ATI] Renoir Radeon High Definition Audio Controller
04:00.2 Encryption controller: Advanced Micro Devices, Inc. [AMD] Family 17h (Models 10h-1fh) Platform Security Processor
04:00.3 USB controller: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
04:00.4 USB controller: Advanced Micro Devices, Inc. [AMD] Renoir/Cezanne USB 3.1
04:00.5 Multimedia controller: Advanced Micro Devices, Inc. [AMD] ACP/ACP3X/ACP6x Audio Coprocessor (rev 01)
04:00.6 Audio device: Advanced Micro Devices, Inc. [AMD] Family 17h/19h HD Audio Controller

dmesg | grep DMI
[    0.000000] DMI: ASUSTeK COMPUTER INC. ROG Zephyrus G14 GA401QM_GA401QM/GA401QM, BIOS GA401QM.410 12/13/2021
[    0.250008] ACPI: Added _OSI(Linux-Lenovo-NV-HDMI-Audio)
[    2.871421] input: HD-Audio Generic HDMI/DP,pcm=3 as /devices/pci0000:00/0000:00:08.1/0000:04:00.1/sound/card1/input17
[    2.871717] input: HDA NVidia HDMI/DP,pcm=3 as /devices/pci0000:00/0000:00:01.1/0000:01:00.1/sound/card0/input18
[    2.871794] input: HDA NVidia HDMI/DP,pcm=7 as /devices/pci0000:00/0000:00:01.1/0000:01:00.1/sound/card0/input19
[    2.872001] input: HDA NVidia HDMI/DP,pcm=8 as /devices/pci0000:00/0000:00:01.1/0000:01:00.1/sound/card0/input20
[    2.872127] input: HDA NVidia HDMI/DP,pcm=9 as /devices/pci0000:00/0000:00:01.1/0000:01:00.1/sound/card0/input21
Comment 1 sander44 2022-05-08 13:15:43 UTC
Created attachment 300907 [details]
dmesg file
Comment 2 Sebastian A. Siewior 2022-05-09 13:28:42 UTC
*** Bug 215955 has been marked as a duplicate of this bug. ***
Comment 3 Sebastian A. Siewior 2022-05-09 13:35:03 UTC
Created attachment 300913 [details]
patch
Comment 4 Sebastian A. Siewior 2022-05-09 13:35:28 UTC
Could you please try the attached patch?

Sebastian
Comment 5 sander44 2022-05-11 06:01:25 UTC
Hi Sebastian,

I will try your patch in the next few days.

Thank you.
A good day.
Comment 6 sander44 2022-05-11 18:43:58 UTC
Hi Sebastian,

I tested today with your patch.
And working correctly.

I disabled vbox/virtualbox drivers for not created conflict with realtime kernel.

Thank you.

Please merge this patch in mainline -rt kernel.

A good day.
Comment 7 Sebastian A. Siewior 2022-05-12 06:00:17 UTC
Okay. added this to v5.18-rc6-rt7 and working with upstream to address it.
I assume that this change did not magically solve your clocksource issue reported in #215956?
Comment 8 sander44 2022-05-12 07:33:54 UTC
Hi Sebastian,

Thank you for added this in upstream.
For issue with clocksource will investigate/collect logs in next days.

A question: For backport in 5.15.36-rt41, how should i proceed?
Do I need to create another ticket?


A good day.
Comment 9 Sebastian A. Siewior 2022-05-12 08:00:52 UTC
You can take this patch and apply it to the v5.15 tree.
For the official release I will wait for upstream's blessing and prepare the patches accordingly. Once that is done, I would look to backport those.

Sebastian

Note You need to log in before you can comment on or make changes to this bug.