include/linux/irqdesc.h
@@ -168,6 +168,7 @@ int generic_handle_irq(unsigned int irq);
  * conversion failed.
  */
 int generic_handle_domain_irq(struct irq_domain *domain, unsigned int hwirq);
+int generic_handle_domain_irq_safe(struct irq_domain *domain, unsigned int hwirq);
 
 #ifdef CONFIG_HANDLE_DOMAIN_IRQ
 int handle_domain_irq(struct irq_domain *domain,
